handled sending multiple files at one in command_line app